k8s/overlays/tracing/patch-predictor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-ops-predictor
  namespace: kubernetes-operations-dashboard
spec:
  template:
    spec:
      containers:
        - name: predictor
